2002-12-03  olicha  <olivier.chapuis@free.fr>

	* fvwm/builtins.c (CMD_PrintInfo):
	New subject nls to PrintInfo

	* libs/FGettext.c (*): 
	New command FlocalePath

2002-12-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	changed version to 2.5.6

	* NEWS:
	* configure.in:
	updated for 2.5.5

2002-12-02  olicha  <olivier.chapuis@free.fr>

	* libs/FRenderInit.c (FRenderInit):
	Fixed alpha depth if !XRenderSupport

	* fvwm/ewmh_icons.c (EWMH_SetIconFromWMIcon):
	* libs/PictureImageLoader.c (PImageCreatePixmapFromArgbData):
	(PImageLoadPng):
	* libs/PictureImageLoader.h:
	Fixed image loading on bigedian machine

2002-12-01  Mikhael Goikhman  <migo@homemail.com>

	* libs/FBidi.c (FBidiConvert):
	several small changes
	* libs/FBidiJoin.c (shape_n_join):
	enabled a new bidi shaping code

2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/frame.c (frame_restore_client_gravities):
	(frame_free_move_resize_args):
	fixed a redrawing problem after shading a window

2002-11-29  olicha  <olivier.chapuis@free.fr>

	* acinclude.m4:
	Defined AM_PATH_PROG_WITH_TEST and re-enable it

	* configure.in:
	* Makefile.am:
	Fixed two missprints

2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/bindings.c (ParseBinding):
	fix for stroke-less compile

2002-11-29  olicha  <olivier.chapuis@free.fr>

	* fvwm/commands.h (enum):
	* fvwm/functable.c (func_table):
	* fvwm/builtins.c (CMD_LocalePath):
	* libs/FGettext.c (FGettextSetLocalePath):
	* libs/FGettext.h:
	Preparation for LocalePath command

	* fvwm/screen.h (ScreenInfo):
	* fvwm/fvwm.c (CreateGCs):
	Rename Scr.TileGC to Scr.BordersGC

	* acinclude.m4:
	A libintl autoconf fix

	* libs/Colorset.c (CreateBackgroundPixmap):
	Do not grab the server when we dump the E setroot pixmap

2002-11-29  olicha  <olivier.chapuis@free.fr>

	* acconfig.h:
	* fvwm/Makefile.am:
	* Makefile.am:
	* configure.in:
	* acinclude.m4:
	Added NLS support with gnu gettext

	* fvwm/fvwm.c (main):
	FGettextInit
